// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserLink should render correctly UserLink should render correctly when route not /favorites and isAuthorizedStatus={true} 1`] = `
<a
  className="header__nav-link header__nav-link--profile"
  href="/favorites"
  onClick={[Function]}
>
  <div
    className="header__avatar-wrapper user__avatar-wrapper"
  />
  <span
    className="header__login"
  >
    Sign in
  </span>
</a>
`;

exports[`UserLink should render correctly UserLink should render correctly when route not /login and isAuthorizedStatus={false} 1`] = `
<a
  className="header__nav-link header__nav-link--profile"
  href="/login"
  onClick={[Function]}
>
  <div
    className="header__avatar-wrapper user__avatar-wrapper"
  />
  <span
    className="header__login"
  >
    Sign in
  </span>
</a>
`;
